new client version

--- a/public/static/data/6.md
+++ b/public/static/data/6.md
@@ -3,9 +3,9 @@
 
 נוסעים לחו"ל? יש סיכון כי עובדי בזק ישמשו כיעדים לאיסוף מידע עסקי או אפילו לפגיעה פיזית (פח"ע). לכן, עליכם להקפיד על הזהירות ועל הערנות. להלן כמה דגשים שחשוב שתזכרו:
 
-* אל תספקו מידע מיותר, הקפידו לא למסור מידע רגיש או מסווג והיו ערניים וזהירים בשיחות עם גורמים זרים.  
-* אין להשאיר ציוד חברה ללא השגחה. שמרו היטב על חפציכם ועל כל מידע רגיש שאתם נושאים אתכם.  
-* שימו לב שציוד המחשוב תמיד נמצא אתכם, גם בעת העלייה למטוס, ושהוא מוגן בסיסמאות.  
-* ודאו שרשת ה-WIFI שאתם משתמשים בה מוגנת בסיסמה.  
-* הימנעו משיתוף מיקום ותמונות בזמן אמת  
-* בטלו את הרשאת שיתוף המקום בהגדרות הרשת החברתית
+- אל תספקו מידע מיותר, הקפידו לא למסור מידע רגיש או מסווג והיו ערניים וזהירים בשיחות עם גורמים זרים.  
+- אין להשאיר ציוד חברה ללא השגחה. שמרו היטב על חפציכם ועל כל מידע רגיש שאתם נושאים אתכם.  
+- שימו לב שציוד המחשוב תמיד נמצא אתכם, גם בעת העלייה למטוס, ושהוא מוגן בסיסמאות.  
+- ודאו שרשת ה-WIFI שאתם משתמשים בה מוגנת בסיסמה.  
+- הימנעו משיתוף מיקום ותמונות בזמן אמת  
+- בטלו את הרשאת שיתוף המקום בהגדרות הרשת החברתית
