client side updates

--- a/public/static/data/2.md
+++ b/public/static/data/2.md
@@ -1,5 +1,4 @@
-
-# 2גלישה בטוחה זה בידיים שלך\!
+# 2. גלישה בטוחה זה בידיים שלך\!
 
 חברים, משחקים, קניות ועוד ועוד..
 
@@ -18,6 +17,6 @@
 * ברשת, לא כל אחד הוא מי שהוא טוען שהוא \- היו ערניים לפרופילים מזויפים  
 * לא קובעים להיפגש עם אנשים שאנחנו מכירים רק מהרשת
 
-גלישה נעימה ובטוחה\!
+<br>
 
-#
+### גלישה נעימה ובטוחה\!
