--- a/public/static/data/1.md
+++ b/public/static/data/1.md
@@ -1,4 +1,4 @@
-# 1בינה מלאכותית (AI) \- איך היא משפיעה על עולמנו
+# 1. בינה מלאכותית (AI) \- איך היא משפיעה על עולמנו
 
 בינה מלאכותית (או AI באנגלית) היא טכנולוגיה המנסה לדמות את החשיבה האנושית בעזרת מחשבים.
 
@@ -6,9 +6,6 @@
 
 בינה מלאכותית עוזרת לנו הרבה בתחומים שונים \- בכתיבה, בלמידה ובחיפוש תשובות באינטרנט. אבל כמו בכל דבר, יש גם סכנות בשימוש בה. פושעי סייבר יכולים להשתמש בכלים כמו ChatGPT כדי לזייף מידע, לרמות אנשים וליצור כלים כדי לתקוף אחרים ברשת.מה כדאי לדעת כדי להישאר בטוחים?
 
-1. **אל תסמכו על כל תשובה**  
-   תזכרו שאתם מדברים עם מחשב, לא עם בן אדם. לפעמים התשובות שהבינה המלאכותית נותנת לא יהיו נכונות. בדקו את אמינות המידע במקום נוסף.  
-2. **אל תשתפו מידע אישי**  
-   בעת שימוש בכלי בינה מלאכותית, אל תשתפו פרטים אישיים כמו שם, כתובת או מידע על המחשב שלכם. המידע הזה יכול להתגלות והשימוש בו עלול להיות מסוכן.  
-3. **הודעות פישינג**  
-   פושעי סייבר יכולים להשתמש בבינה מלאכותית כדי לשלוח לכם הודעות שמנוסחות בצורה מצוינת, כך שקשה להבין אם מדובר בהודעה אמתית או מזויפת. תמיד בדקו את כתובת השולח ואם יש משהו לא רגיל בהודעה.
+1. **אל תסמכו על כל תשובה** - תזכרו שאתם מדברים עם מחשב, לא עם בן אדם. לפעמים התשובות שהבינה המלאכותית נותנת לא יהיו נכונות. בדקו את אמינות המידע במקום נוסף.  
+2. **אל תשתפו מידע אישי** - בעת שימוש בכלי בינה מלאכותית, אל תשתפו פרטים אישיים כמו שם, כתובת או מידע על המחשב שלכם. המידע הזה יכול להתגלות והשימוש בו עלול להיות מסוכן.
+3. **הודעות פישינג** - פושעי סייבר יכולים להשתמש בבינה מלאכותית כדי לשלוח לכם הודעות שמנוסחות בצורה מצוינת, כך שקשה להבין אם מדובר בהודעה אמתית או מזויפת. תמיד בדקו את כתובת השולח ואם יש משהו לא רגיל בהודעה.
