--- a/public/static/data/9.md
+++ b/public/static/data/9.md
@@ -1,13 +1,24 @@
 
-# 9כל מה שרציתם לדעת על נוזקה
+# 9. כל מה שרציתם לדעת על נוזקה
 
 נוזקה (בלעז: Malware) היא תוכנה המותקנת במערכת מחשוב ומאפשרת לתוקף פוטנציאלי לקבל שליטה במערכת זו ללא ידיעת המשתמש. בחלק מהמקרים הנוזקה מבוססת על ניצול חולשות (כשלים) בקוד. בחלק אחר על ניצול תהליכים לגיטימיים במערכת ההפעלה. מגוון הנוזקות רחב וכולל את כל קשת מערכות המחשוב- מחשב אישי, שרת ועד טלפון סלולרי והתקני IOT (אינטרנט של הדברים כמו רובוט שואב או בית חכם) למיניהם. למעשה, ניתן להתקין נוזקה על כל התקן אלקטרוני שמופעל על ידי מערכת הפעלה כלשהי.
 
 ### סוגי נוזקות:
 
-* **וירוס** \- נוזקה הגורמת נזק למחשב, יוצרת עותקים של עצמה או חודרת לתוכנות אחרות  
-* **סוס טרויאני** \- תכנה החודרת למחשבו של המשתמש, תוך התחזות לתוכנה תמימה  
-* **רוגלה** \- נוזקה העוקבת בחשאי אחר הרגלי השימוש של המשתמש במחשב שבו היא מותקנת, ומעבירה לבעליה את המידע הנאסף ממחשבו.  
-* **ארנב** \- נוזקה שחודרת למחשבו של המשתמש ומשכפלת עצמה פעמים רבות, על מנת לגרום להאטת פעילות המחשב ואף לקריסת המערכת  
-* **תולעת** \- נוזקה המשכפלת עצמה דרך רשת האינטרנט, ללא תלות בווירוס או תוכנה נוספת  
-* **כופר**\- נוזקות אשר תפקידן להצפין קבצים הנמצאים על מחשבו של משתמש המחשב או לחסום את הגישה לקבצים אלו, וזאת תוך הצגת דרישה לתשלום בעבור התרת ההצפנה או החסימה.
+**וירוס**<br>
+נוזקה הגורמת נזק למחשב, יוצרת עותקים של עצמה או חודרת לתוכנות אחרות  
+
+**סוס טרויאני**<br>
+תכנה החודרת למחשבו של המשתמש, תוך התחזות לתוכנה תמימה  
+
+**רוגלה**<br>
+נוזקה העוקבת בחשאי אחר הרגלי השימוש של המשתמש במחשב שבו היא מותקנת, ומעבירה לבעליה את המידע הנאסף ממחשבו.  
+
+**ארנב**<br>
+נוזקה שחודרת למחשבו של המשתמש ומשכפלת עצמה פעמים רבות, על מנת לגרום להאטת פעילות המחשב ואף לקריסת המערכת  
+
+**תולעת**<br>
+נוזקה המשכפלת עצמה דרך רשת האינטרנט, ללא תלות בווירוס או תוכנה נוספת  
+
+**כופר**<br>
+נוזקות אשר תפקידן להצפין קבצים הנמצאים על מחשבו של משתמש המחשב או לחסום את הגישה לקבצים אלו, וזאת תוך הצגת דרישה לתשלום בעבור התרת ההצפנה או החסימה.
