--- a/public/static/data/1.md
+++ b/public/static/data/1.md
@@ -1,6 +1,6 @@
 # 1. בינה מלאכותית (AI) \- איך היא משפיעה על עולמנו
 
-בינה מלאכותית (או AI באנגלית) היא טכנולוגיה המנסה לדמות את החשיבה האנושית בעזרת מחשבים.
+### בינה מלאכותית (או AI באנגלית) היא טכנולוגיה המנסה לדמות את החשיבה האנושית בעזרת מחשבים.
 
 בעזרת בינה מלאכותית, אנחנו יכולים להשתמש בכלים כמו ChatGPT: מערכת שמסוגלת לכתוב טקסטים, לענות על שאלות ולעזור לנו למצוא תשובות בכל מיני נושאים.
 
