--- a/public/static/data/11.md
+++ b/public/static/data/11.md
@@ -1,9 +1,8 @@
+# 11. איך נגן על עצמנו מתקיפות סמישינג
 
-# 11איך נגן על עצמנו מתקיפות סמישינג
-
-* הימנעו מלחיצה על קישורים בהודעות טקסט  
-* לעולם אל תשיבו להודעות טקסט אשר מבקשות את המידע האישי או הפיננסי שלכם/  
-* כאשר אתם מקבלים הודעות טקסט \- בדקו פעמיים את התוכן והתקשרו אליהם ישירות על מנת לוודא שהודעת הטקסט לגיטימית.  
-* לעולם אל תתקשרו למספר הטלפון ממנו נשלחה הודעת הטקסט.
+- הימנעו מלחיצה על קישורים בהודעות טקסט.
+- לעולם אל תשיבו להודעות טקסט אשר מבקשות את המידע האישי או הפיננסי שלכם.
+- כאשר אתם מקבלים הודעות טקסט \- בדקו פעמיים את התוכן והתקשרו אליהם ישירות על מנת לוודא שהודעת הטקסט לגיטימית.
+- לעולם אל תתקשרו למספר הטלפון ממנו נשלחה הודעת הטקסט.
 
 בכל מקרה בו אתם חושדים בהודעה \- מחקו אותה או דווחו עליה כהודעת ספאם (זבל) לספק השירות שלכם ואז מחקו אותה.
