--- a/public/static/data/12.md
+++ b/public/static/data/12.md
@@ -1,18 +1,17 @@
+# 12. עבודה מרחוק
 
-# 12עבודה מרחוק
+### עובדים מהבית או מרחוק? כעובדי בזק יש דגשים וכללים שעליכם לפעול לפיהם, כדי להגן על עבודתכם ולשמור על הזהירות:
 
-עובדים מהבית או מרחוק? כעובדי בזק יש דגשים וכללים שעליכם לפעול לפיהם, כדי להגן על עבודתכם ולשמור על הזהירות:
-
-* השתמשו בסיסמה חזקה לנעילת המכשירים שלכם.  
-* הפרדת סביבות- נהלו תיבות דוא"ל נפרדות לעבודה ולפעילות פרטית.  
-* יש ליצור סיסמה שונה עבור כל חשבון.  
-* זכרו להתנתק מהמייל או מכל מערכת אחרת בתום השימוש.  
-* שימוש ברשת מאובטחת- העדיפו את הרשת הביתית שלכם.  
-* הגדירו סיסמה חזקה לנתב.  
-* אם אין לכם WIFI, גלשו באמצעות הטלפון הסלולרי שלכם (נקודה חכמה).  
-* גלישה מאובטחת- התחברו למקום העבודה באמצעות VPN או כלי אחר המיועד להתחברות מאובטחת מרחוק (פעלו על פי הנחיות אבטחת המידע).  
-* אם קיבלתם מחשב נייד, יש לעבוד ולהתחבר לרשת החברה רק באמצעותו.  
-* סביבת עבודה- אף על פי שאתם עובדים מהבית, עדיין קיימת סכנה של חשיפת מידע רגיש של החברה ולקוחותיה לבני משפחותיכם.  
-* אנטי וירוס  
-* רצוי לוודא כי על המחשב בבית מותקנות תוכנות אנטי-וירוס ואמצעי האבטחה בנתב הביתי עובדים.  
+* השתמשו בסיסמה חזקה לנעילת המכשירים שלכם.
+* הפרדת סביבות - נהלו תיבות דוא"ל נפרדות לעבודה ולפעילות פרטית.
+* יש ליצור סיסמה שונה עבור כל חשבון.
+* זכרו להתנתק מהמייל או מכל מערכת אחרת בתום השימוש.
+* שימוש ברשת מאובטחת - העדיפו את הרשת הביתית שלכם.
+* הגדירו סיסמה חזקה לנתב.
+* אם אין לכם WIFI, גלשו באמצעות הטלפון הסלולרי שלכם (נקודה חכמה).
+* גלישה מאובטחת - התחברו למקום העבודה באמצעות VPN או כלי אחר המיועד להתחברות מאובטחת מרחוק (פעלו על פי הנחיות אבטחת המידע).
+* אם קיבלתם מחשב נייד, יש לעבוד ולהתחבר לרשת החברה רק באמצעותו.
+* סביבת עבודה - אף על פי שאתם עובדים מהבית, עדיין קיימת סכנה של חשיפת מידע רגיש של החברה ולקוחותיה לבני משפחותיכם.
+* אנטי וירוס.
+* רצוי לוודא כי על המחשב בבית מותקנות תוכנות אנטי-וירוס ואמצעי האבטחה בנתב הביתי עובדים.
 * ניתן לבקש מנציגי ספקית האינטרנט עזרה בהגדרת הנתב, וכן לשאול אותם לגבי שירות אבטחת מידע נוספים על קו התקשורת.
