--- a/public/static/data/17.md
+++ b/public/static/data/17.md
@@ -1,12 +1,11 @@
+# 17. קניות בטוחות ברשת
 
-# 17קניות בטוחות ברשת
+**שופינג אונליין** \- קל, הופך את החיים לכל כך הרבה יותר פשוטים וגם, להודות על האמת, זה כיף לא קטן. עם זאת, בכיף הזה עלולים להסתתר גם סיכונים לא מעטים, וכשאתם עובדים בבזק, עליכם להיות עוד יותר זהירים. אז איך ממשיכים ליהנות משופינג באינטרנט, אבל בצורה הבטוחה ביותר? **הנה כמה עצות שימושיות:**
 
-שופינג אונליין \- קל, הופך את החיים לכל כך הרבה יותר פשוטים וגם, להודות על האמת, זה כיף לא קטן. עם זאת, בכיף הזה עלולים להסתתר גם סיכונים לא מעטים, וכשאתם עובדים בבזק, עליכם להיות עוד יותר זהירים. אז איך ממשיכים ליהנות משופינג באינטרנט, אבל בצורה הבטוחה ביותר? הנה כמה עצות שימושיות:
-
-1. אל תשתמשו במייל של בזק כדי להירשם לאתרי קניות.  
-2. בדקו היטב את שם האתר: האקרים מנסים לחקות כתובות פופולריות, כגון \- Amazon.com.  
-3. העדיפו תמיד אתר מאובטח: אתרים מאובטחים מכילים בשורת הכתובת את הרצף https (הקפידו על האות s) וכן סימון של מנעול.  
-4. סיסמאות חזקות: באתרי הקניות הגדולים הקפידו על סיסמאות חזקות והחליפו אותן לפחות פעם בחודש.  
-5. רשתות WiFi ציבוריות: הימנעו מקניות כשאתם מחוברים ל-WiFi ציבורי. רשתות אלה פחות מאובטחות.  
-6. העדיפו כרטיסי אשראי או פיי-פאל: חברות האשראי ושירות פיי-פאל כבר למודי ניסיון, ומאפשרים החזר כספי בעת הונאה.  
+1. אל תשתמשו במייל של בזק כדי להירשם לאתרי קניות.
+2. בדקו היטב את שם האתר: האקרים מנסים לחקות כתובות פופולריות, כגון \- Amazon.com.
+3. העדיפו תמיד אתר מאובטח: אתרים מאובטחים מכילים בשורת הכתובת את הרצף https (הקפידו על האות s) וכן סימון של מנעול.
+4. סיסמאות חזקות: באתרי הקניות הגדולים הקפידו על סיסמאות חזקות והחליפו אותן לפחות פעם בחודש.
+5. רשתות WiFi ציבוריות: הימנעו מקניות כשאתם מחוברים ל-WiFi ציבורי. רשתות אלה פחות מאובטחות.
+6. העדיפו כרטיסי אשראי או פיי-פאל: חברות האשראי ושירות פיי-פאל כבר למודי ניסיון, ומאפשרים החזר כספי בעת הונאה.
 7. הקפידו לוודא כי מערכת ההפעלה שלכם, האנטי-וירוס והדפדפן שלכם מעודכנים.
