--- a/public/static/data/2.md
+++ b/public/static/data/2.md
@@ -1,6 +1,6 @@
 # 2. גלישה בטוחה זה בידיים שלך\!
 
-חברים, משחקים, קניות ועוד ועוד..
+### חברים, משחקים, קניות ועוד ועוד..
 
 הרשת היא חלק בלתי נפרד מחיינו ופותחת בפנינו עולם בלתי מוגבל של אפשרויות, אך גם של סכנות סייבר ופגיעה בפרטיות.
 
