--- a/public/static/data/20.md
+++ b/public/static/data/20.md
@@ -1,17 +1,16 @@
+# 20. שולחן נקי \- התנהלות נכונה בסביבת העבודה לשמירה על מידע רגיש
 
-# 20שולחן נקי \- התנהלות נכונה בסביבת העבודה לשמירה על מידע רגיש
-
-הגנה על מידע רגיש דורשת מקצועיות ואחריות והיא קריטית לשמירה על נכסי החברה והישרדותה.
+### הגנה על מידע רגיש דורשת מקצועיות ואחריות והיא קריטית לשמירה על נכסי החברה והישרדותה.
 
 כדי שנוכל לשמור על רמת אבטחת מידע גבוהה, תצטרכו ליישם מספר עקרונות קטנים ופשוטים בהתנהלות ובסביבת העבודה בחיי היומיום. עקרונות קטנים שיעשו הבדל גדול ברמת אבטחת המידע.
 
-1. שמרו על שולחן נקי \- וודאו כי המסמכים הרגישים נעולים או גרוסים.  
-2. הגנו על סיסמאות \- אל תשאירו אותם במקום חשוף ואל תשתפו עם אחרים.  
-3. שלחתם מסמכים רגישים להדפסה? דאגו לאסוף אותם מהמדפסת.  
-4. השליכו כל מסמך לפח הגריסה \- לא לפח רגיל.  
-5. השתמשו רק במדיה נתיקה המאושרת על ידי אבטחת המידע של הארגון ודאגו לנעול את המדיה הנתיקה שברשותכם כאשר אינכם משתמשים בה.  
-6. שימו לב לאנשים לא מוכרים שמסתובבים בשטח המשרד וודאו שהם באמת אמורים להיות שם  
-7. הקפידו לכבות או לנעול את המחשב \- גם אם יצאתם רק לרגע  
-8. יש לנעול דלתות משרד בסוף יום עבודה או אם עזבנו את המקום באופן זמני  
-9. כאשר אתם במרחב הציבורי \- שימו לב איזה מידע אתם חושפים ומי עלול להאזין לו  
-10. שמרו מידע רגיש רק בתיקיות המוגנות מפני צפייה מגורמים שאינם מורשים
+1. **שמרו על שולחן נקי** \- וודאו כי המסמכים הרגישים נעולים או גרוסים.
+2. **הגנו על סיסמאות** \- אל תשאירו אותם במקום חשוף ואל תשתפו עם אחרים.
+3. שלחתם מסמכים רגישים להדפסה? דאגו לאסוף אותם מהמדפסת.
+4. השליכו כל מסמך **לפח הגריסה** \- לא לפח רגיל.
+5. השתמשו רק במדיה נתיקה המאושרת על ידי אבטחת המידע של הארגון ודאגו לנעול את המדיה הנתיקה שברשותכם כאשר אינכם משתמשים בה.
+6. שימו לב לאנשים לא מוכרים שמסתובבים בשטח המשרד וודאו שהם באמת אמורים להיות שם.
+7. הקפידו לכבות או לנעול את המחשב \- גם אם יצאתם **רק לרגע**.
+8. יש לנעול דלתות משרד בסוף יום עבודה או אם עזבנו את המקום באופן זמני.
+9. כאשר אתם במרחב הציבורי \- שימו לב איזה מידע אתם חושפים ומי עלול להאזין לו.
+10. שמרו מידע רגיש רק בתיקיות המוגנות מפני צפייה מגורמים שאינם מורשים.
