--- a/public/static/data/3.md
+++ b/public/static/data/3.md
@@ -1,17 +1,16 @@
-
-# 3דליפת מידע מידע זה לא משחק\!
+# 3. דליפת מידע מידע זה לא משחק\!
 
 ### איך נוכל למנוע דלף מידע?
 
-1. זהו את המידע הרגיש שברשותכם: מידע אישי, עסקי או כספי שנמסר לכם מתוקף תפקידכם  
-2. נגנב או אבד ציוד שעלול להכיל מידע של בזק? דווחו **מיד לאבטחת המידע**  
-3. לא משאירים מידע רגיש על שולחן העבודה  
-4. יש לכם גישה למידע רגיש? שמרו אותו רק בתיקיות ייעודיות  
-5. שולחים מייל עם מידע רגיש? וודאו את זהות הנמען  
-6. נתבקשתם להעביר מידע למישהו אחר? העבירו רק מידע שבסמכותכם להעביר  
-7. עובדים מרחוק? שימו לב שלא מאזינים לכם או מסתכלים לכם מעבר לכתף  
-8. משתמשים בכלי בינה מלאכותית? **אל תשתפו מידע רגיש עם כלי ה- AI**  
-9. פעילים ברשתות החברתיות? זה לא המקום לשתף מידע רגיש  
-10. זכרו תמיד \- דלף של מידע רגיש יכול לגרום נזק לבזק ולקוחותיה
+1. זהו את המידע הרגיש שברשותכם: מידע אישי, עסקי או כספי שנמסר לכם מתוקף תפקידכם.
+2. נגנב או אבד ציוד שעלול להכיל מידע של בזק? דווחו **מיד לאבטחת המידע**.
+3. לא משאירים מידע רגיש על שולחן העבודה.
+4. יש לכם גישה למידע רגיש? שמרו אותו רק בתיקיות ייעודיות.
+5. שולחים מייל עם מידע רגיש? וודאו את זהות הנמען.
+6. נתבקשתם להעביר מידע למישהו אחר? העבירו רק מידע שבסמכותכם להעביר.
+7. עובדים מרחוק? שימו לב שלא מאזינים לכם או מסתכלים לכם מעבר לכתף.
+8. משתמשים בכלי בינה מלאכותית? **אל תשתפו מידע רגיש עם כלי ה- AI**.
+9. פעילים ברשתות החברתיות? זה לא המקום לשתף מידע רגיש.
+10. זכרו תמיד \- דלף של מידע רגיש יכול לגרום נזק לבזק ולקוחותיה.
 
-חשוב להיות קשוב\!
+**חשוב להיות קשוב!**
