--- a/public/static/data/4.md
+++ b/public/static/data/4.md
@@ -1,7 +1,6 @@
+# 4. זהירות WIFI ציבורי
 
-# 4זהירות WIFI ציבורי
-
-בחופשה, בבית הקפה, בשדה התעופה, במוזיאון והאמת בכל מקום אפשרי ניתן כיום להתחבר לרשת WIFI חינמית ציבורית של בית העסק או של העיר עצמה ולגלוש שלא על חשבון הספק הסלולארי שלכם.
+### בחופשה, בבית הקפה, בשדה התעופה, במוזיאון והאמת בכל מקום אפשרי ניתן כיום להתחבר לרשת WIFI חינמית ציבורית של בית העסק או של העיר עצמה ולגלוש שלא על חשבון הספק הסלולארי שלכם.
 
 אבל, רשתות אלחוטיות ציבוריות טומנות בחובן גם סכנות, על כן, להלן מספר עצות וכללים לשימוש נכון:
 
