--- a/public/static/data/5.md
+++ b/public/static/data/5.md
@@ -1,5 +1,4 @@
-
-# 5כיצד מתגוננים בפני וישינג?
+# 5. כיצד מתגוננים בפני וישינג?
 
 וישינג (קיצור ל Voice Phishing) הנו וקטור תקיפה כנגד הגורם האנושי דרך הטלפון. זוהי בעצם הונאת הנדסה חברתית שבה מנסים ההאקרים "לעבוד" עלינו ולגרום לנו לגלות פרטים אישיים או פיננסיים באמצעות שיחות טלפון זדוניות. האקרים משתמשים בשיטה זו גם על מנת לגרום לקורבנותיהם לבצע פעולות זדוניות במסווה תמים.
 
@@ -11,7 +10,7 @@
 
 עצרו, חשבו והקשיבו לתחושת הבטן שלכם \- אם משהו לא מרגיש נכון בשיחה, נתקו ואל תמשיכו באינטראקציה. נהגו בזהירות אם המתקשר מבקש מכם מידע שאמור להיות כבר ברשותו.
 
-זכרו תמיד \- אם אתם חושדים במשהו:
+### זכרו תמיד \- אם אתם חושדים במשהו:
 
-* בבית: נתקו, ואם אינכם בטוחים, ניתן להתקשר למספר הרשמי של החברה/נותן השירות ולוודא את אמיתות השיחה.  
-* בעבודה: נתקו והודיעו לנציגי אבטחת המידע.
+- **בבית**: נתקו, ואם אינכם בטוחים, ניתן להתקשר למספר הרשמי של החברה/נותן השירות ולוודא את אמיתות השיחה.  
+- **בעבודה**: נתקו והודיעו לנציגי אבטחת המידע.
