--- a/public/static/data/10.md
+++ b/public/static/data/10.md
@@ -1,10 +1,9 @@
-
-# 10סמישינג \- זהירות SMS
+# 10. סמישינג \- זהירות SMS
 
 ### סמישינג \- תקיפה שכיחה באמצעות מסרון SMS
 
 **התוקף שולח הודעת SMS זדונית בצירוף קישור על מנת לגרום לקורבן:**
 
-* להוריד לעצמו נוזקה (וירוס) למכשיר הסלולרי  
-* לגלות מידע אישי.  
-* לחשוף פרטים רגישים. (כגון מידע פיננסי)
+- להוריד לעצמו נוזקה (וירוס) למכשיר הסלולרי.
+- לגלות מידע אישי.  
+- לחשוף פרטים רגישים. (כגון מידע פיננסי).
