--- a/public/static/data/7.md
+++ b/public/static/data/7.md
@@ -1,8 +1,10 @@
 # 7. IOT \- מה מכשירים יודעים עלינו
 
-### הכל מחובר לרשת: כך תתמודדו עם איומים מהתקניIOT-Internet Of Things
+### הכל מחובר לרשת: כך תתמודדו עם איומים מהתקני IOT - Internet Of Things
 
-להפעיל מרחוק את המזגן דקות לפני שאנחנו חוזרים הביתה, לעקוב אחר קצב פעימות הלב שלנו בזמן ריצה, ואפילו לשלוט בטלוויזיה שלנו דרך הטלפון הנייד- אין ספק שהתקני IOT הפכו את חיינו לנוחים הרבה יותר. יחד עם זאת, התקני IOT חושפים אותנו לסיכוני סייבר לא מעטים. **כך תתמודדו איתם:**
+להפעיל מרחוק את המזגן דקות לפני שאנחנו חוזרים הביתה, לעקוב אחר קצב פעימות הלב שלנו בזמן ריצה, ואפילו לשלוט בטלוויזיה שלנו דרך הטלפון הנייד- אין ספק שהתקני IOT הפכו את חיינו לנוחים הרבה יותר. יחד עם זאת, התקני IOT חושפים אותנו לסיכוני סייבר לא מעטים.
+
+### כך תתמודדו איתם:
 
 - התקני IOT יכולים לאסוף מידע ולשדר מידע. הרחיקו התקנים אלו מחדרי שינה, נוחיות ומקלחת והסירו התקנים לבישים במצבים רגישים.
 - הקפידו על סיסמאות קשות לפיצוח.
